New section added

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -14,7 +14,9 @@
 @import "components/buttons";
 
 // Layouts
+@import "layouts/top-navbar";
 @import "layouts/main-menu";
+@import "layouts/main-footer";
 
 // Pages
 @import "pages/home";
