--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -2,7 +2,7 @@
     border: 0;
     border-radius: 5px;
     height: 50px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     font-weight: 700;
@@ -11,17 +11,72 @@
     background-color: $primary-pink;
     color: $white;
     transition: .35s ease-in-out all;
+    text-decoration: none;
+    position: relative;
+    overflow: hidden;
+
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        background: rgba(255, 255, 255, 0.5);
+        width: 60px;
+        height: 100%;
+        left: 0;
+        top: 0;
+        opacity: .5;
+        filter: blur(30px);
+        transform: translateX(-100px) skewX(-15deg);
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        background: rgba(255, 255, 255, 0.2);
+        width: 30px;
+        height: 100%;
+        left: 30px;
+        top: 0;
+        opacity: 0;
+        filter: blur(5px);
+        transform: translateX(-100px) skewX(-15deg);
+    }
 
     &:focus {
         outline: none;
+        color: $white;
     }
 
     &:hover {
         box-shadow: 0 0 8px 2px rgba($black, 0.2);
+        color: $white;
+
+        &:before {
+            transform: translateX(300px) skewX(-15deg);
+            opacity: 0.6;
+            transition: .7s;
+        }
+    
+        &:after {
+            transform: translateX(300px) skewX(-15deg);
+            opacity: 1;
+            transition: .7s;
+        }
     }
 
     &--secondary {
-       color: $primary-blue;
-       background-color: $blue-100;
+        color: $primary-blue;
+        background-color: $blue-100;
+
+        &::before,
+        &::after {
+            background: rgba($primary-blue, 0.1);
+        }
+
+        &:hover {
+            box-shadow: 0 0 5px 2px rgba($black, 0.1);
+            color: $primary-blue;
+        }
     }
 }
