--- a/src/assets/scss/abstract/_functions.scss
+++ b/src/assets/scss/abstract/_functions.scss
@@ -13,20 +13,20 @@ $p-font-sizes: (
 );
 
 $h1-font-sizes: (
-    null : (30px, 40px),
-    medium : (40px, 1),
+    null : (35px, 45px),
+    medium : (40px, 1.5),
     large: (60px, 1.5)
 );
 
 $h2-font-sizes: (
     null : (25px, 35px),
-    medium : (35px, 1px),
+    medium : (35px, 1.5),
     large: (50px, 1.5)
 );
 
 $h3-font-sizes: (
-    null : (25px, 35px),
-    x-large: (30px, 1.5)
+    null : (20px, 35px),
+    medium: (30px, 1.5)
 );
 
 $h4-font-sizes: (
