--- a/src/assets/scss/layouts/_main-menu.scss
+++ b/src/assets/scss/layouts/_main-menu.scss
@@ -17,73 +17,102 @@
         visibility: visible;
         height: 100vh;
 
-        li {
-            animation: fadeInRight .5s ease forwards;
-            animation-delay: .35s;
+        .overlay-menu {
+            li {
+                animation: fadeInRight .5s ease forwards;
+                animation-delay: .35s;
 
-            &:nth-of-type(2) {
-                animation-delay: .4s;
-            }
+                &:nth-of-type(2) {
+                    animation-delay: .4s;
+                }
 
-            &:nth-of-type(3) {
-                animation-delay: .45s;
-            }
-
-            &:nth-of-type(4) {
-                animation-delay: .50s;
+                &:nth-of-type(3) {
+                    animation-delay: .45s;
+                }
             }
         }
     }
 
-    nav {
+    .overlay-menu {
         position: relative;
-        height: 70%;
         top: 50%;
         transform: translateY(-50%);
-        font-size: 6rem;
-        
+        font-size: clamp(3.5rem, 5vw, 6rem);
         text-align: center;
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0 auto;
+            display: inline-flex;
+            flex-direction: column;
+            position: relative;
+
+            li {
+                display: inline-block;
+                opacity: 0;
+                position: relative;
+
+                a {
+                    display: inline-block;
+                    position: relative;
+                    color: $white;
+                    text-decoration: none;
+                    padding: 0 1.5rem;
+                    font-weight: 700;
+                    line-height: 1;
+
+                    &:hover:after,
+                    &:focus:after,
+                    &:active:after {
+                        width: 100%;
+                    }
+
+                    &:after {
+                        content: '';
+                        position: absolute;
+                        top: 65%;
+                        left: 50%;
+                        width: 0%;
+                        transform: translate(-50%, -50%);
+                        height: 20px;
+                        background: $primary-pink;
+                        transition: .35s;
+                        z-index: -1;
+                    }
+                }
+            }
+        }
     }
 
-    ul {
-        list-style: none;
-        padding: 0;
-        margin: 0 auto;
-        display: inline-flex;
-        flex-direction: column;
-        position: relative;
-        height: 100%;
+    .bottom-details {
+        padding: 2rem 0;
 
-        li {
-            display: inline-block;
-            opacity: 0;
+        .menu-bottom-block {
+            text-align: center;
 
-            a {
-                display: inline-block;
-                position: relative;
+            h4 {
                 color: $white;
-                text-decoration: none;
-                padding: 0 1.5rem;
                 font-weight: 700;
-                line-height: 1;
+            }
 
-                &:hover:after,
-                &:focus:after,
-                &:active:after {
-                    width: 100%;
-                }
+            p {
+                color: $white;
+                font-weight: 500;
+            }
 
-                &:after {
-                    content: '';
-                    position: absolute;
-                    top: 65%;
-                    left: 50%;
-                    width: 0%;
-                    transform: translate(-50%, -50%);
-                    height: 20px;
-                    background: $primary-pink;
-                    transition: .35s;
-                    z-index: -1;
+            .social-icons-list {
+                margin: 0;
+                padding: 0;
+                list-style: none;
+
+                li {
+                    padding: 0 0.5rem;
+
+                    img {
+                        width: 25px;
+                        filter: invert(1);
+                    }
                 }
             }
         }
@@ -93,7 +122,7 @@
 @keyframes fadeInRight {
     0% {
         opacity: 0;
-        left: 20%;
+        left: 20rem;
     }
 
     100% {
