--- a/src/assets/scss/layouts/_top-navbar.scss
+++ b/src/assets/scss/layouts/_top-navbar.scss
@@ -6,4 +6,34 @@
         background-color: $white;
         box-shadow: 0 3px 6px rgba(0,0,0,0.10), 0 3px 6px rgba(0,0,0,0.15);
     }
+
+    .navbar-nav {
+        .nav-item {
+            transition: .35s;
+
+            &:hover {
+                background-color: rgba($secondary-blue,0.1);
+                border-radius: 5px;
+            }
+
+            .nav-link {
+                font-size: 16px;
+                font-weight: 600;
+
+                i {
+                    margin-left: 10px;
+                    font-size: 14px;
+                    font-weight: 400;
+                }
+
+                &.signup {
+                    color: $primary-pink;
+                }
+
+                &.login {
+                    color: $primary-blue;
+                }
+            }
+        }
+    }
 }
