--- a/src/components/main-menu.html
+++ b/src/components/main-menu.html
@@ -1,9 +1,40 @@
-<div class="overlay" id="overlay">
-    <nav class="overlay-menu">
+<div class="overlay d-flex flex-column" id="overlay">
+    <nav class="overlay-menu flex-grow-1">
         <ul>
             <li><a href="#">Stores</a></li>
             <li><a href="#">Partner with us</a></li>
             <li><a href="#">Support</a></li>
         </ul>
     </nav>
+    <div class="container bottom-details">
+        <div class="row">
+            <div class="col-12 col-md-4">
+                <div class="menu-bottom-block">
+                    <h4 class="mb-4">Contact info</h4>
+                    <p class="mb-3">+94 772 985 290</p>
+                    <p>support@mintpay.lk</p>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-4">
+                <div class="menu-bottom-block">
+                    <h4 class="mb-4">Our location</h4>
+                    <p class="mb-3">410, 33 Bauddhaloka Mawatha,
+                        Colombo 00700</p>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-4">
+                <div class="menu-bottom-block">
+                    <h4 class="mb-4">Social media</h4>
+                    <ul class="social-icons-list d-flex flex-row justify-content-center">
+                        <li><a href=""><img src="assets/img/instagram.png" alt=""></a></li>
+                        <li><a href=""><img src="assets/img/facebook.png" alt=""></a></li>
+                        <li><a href=""><img src="assets/img/whatsapp.png" alt=""></a></li>
+                        <li><a href=""><img src="assets/img/twitter.png" alt=""></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
