--- a/src/components/main-menu.html
+++ b/src/components/main-menu.html
@@ -9,24 +9,24 @@
     <div class="container bottom-details">
         <div class="row">
             <div class="col-12 col-md-4">
-                <div class="menu-bottom-block">
-                    <h4 class="mb-4">Contact info</h4>
-                    <p class="mb-3">+94 772 985 290</p>
+                <div class="menu-bottom-block mb-4 mb-md-0">
+                    <h4 class="mb-3 mb-md-4">Contact info</h4>
+                    <p class="mb-2 mb-md-3">+94 772 985 290</p>
                     <p>support@mintpay.lk</p>
                 </div>
             </div>
 
             <div class="col-12 col-md-4">
-                <div class="menu-bottom-block">
-                    <h4 class="mb-4">Our location</h4>
-                    <p class="mb-3">410, 33 Bauddhaloka Mawatha,
+                <div class="menu-bottom-block mb-4 mb-md-0">
+                    <h4 class="mb-3 mb-md-4">Our location</h4>
+                    <p class="mb-2 mb-md-3">410, 33 Bauddhaloka Mawatha,
                         Colombo 00700</p>
                 </div>
             </div>
 
             <div class="col-12 col-md-4">
                 <div class="menu-bottom-block">
-                    <h4 class="mb-4">Social media</h4>
+                    <h4 class="mb-3 mb-md-4">Social media</h4>
                     <ul class="social-icons-list d-flex flex-row justify-content-center">
                         <li><a href=""><img src="assets/img/instagram.png" alt=""></a></li>
                         <li><a href=""><img src="assets/img/facebook.png" alt=""></a></li>
