--- a/src/assets/scss/layouts/_main-footer.scss
+++ b/src/assets/scss/layouts/_main-footer.scss
@@ -3,6 +3,14 @@
     background-color: $blue-100;
 
     .footer-block {
+        text-align: center;
+        margin-bottom: 2rem;
+
+        @media (min-width: 992px) {
+            text-align: left;
+            margin-bottom: 0;
+        }
+
         &__title {
             font-weight: 600;
         }
