--- a/src/assets/scss/layouts/_main-menu.scss
+++ b/src/assets/scss/layouts/_main-menu.scss
@@ -35,10 +35,17 @@
 
     .overlay-menu {
         position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: clamp(3.5rem, 5vw, 6rem);
+        margin-top: 4rem;
+        font-size: 40px;
         text-align: center;
+
+        @media (min-width: 576px) {
+            font-size: clamp(3.5rem, 8vw, 6rem);   
+        }
+
+        @media (min-width: 768px) {
+            margin-top: 2rem;
+        }
 
         ul {
             list-style: none;
