--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -18,7 +18,11 @@
             justify-content: center;
 
             img {
-                width: 100%;
+                width: 80%;
+
+                @media (min-width: 768px) {
+                    width: 100%;
+                }
             }
         }
     }
