--- a/src/layouts/main-header.html
+++ b/src/layouts/main-header.html
@@ -58,7 +58,7 @@
                 <li class="nav-item pe-3 pe-sm-0">
                     <a class="nav-link login" href="#">
                         <span class="d-none d-sm-inline-block">Log in</span>
-                        <i class="fi-sr-shopping-bag"></i>
+                        <i class="fi-sr-lock"></i>
                     </a>
                 </li>
             </ul>
