--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+@import "aos/dist/aos.css";
 
 //Abstract
 @import "abstract/functions";
@@ -20,6 +21,7 @@
 
 // Pages
 @import "pages/home";
+@import "pages/stores";
 
 // Vendors
 @import "vendors/slick-slider";
