--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -15,3 +15,19 @@ body {
         height: 100vh;
     }
 }
+
+.sub-page-header-section {
+    padding: 8rem 0 6rem;
+
+    &.pink-bg {
+        background-color: rgba($primary-pink, 0.05);
+    }
+
+    &.yellow-bg {
+        background-color: rgba($primary-orange, 0.1);
+    }
+
+    &.green-bg {
+        background-color: rgba($primary-green, 0.1);
+    }
+}
