--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -70,3 +70,61 @@
         }
     }
 }
+
+.store-slider {
+    margin: 3rem 0 6rem;
+
+    &__item {
+        padding: 0 1rem;
+        outline: 0;
+
+        .store-img {
+            img {
+                width: 100%;
+                height: 350px;
+                border-radius: 10px;
+                object-fit: cover;
+            }
+
+            .store-link {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: .35s;
+                opacity: 0;
+                
+                a {
+                    color: $primary-blue;
+                    font-weight: 600;
+                    font-size: 16px;
+                    background-color: $blue-100;
+                    padding: 1rem 2.5rem;
+                    border-radius: 5px;
+                    transition: .35s;
+                    text-decoration: none;
+
+                    &:hover {
+                        background-color: $blue-200;
+                        text-decoration: none;
+                    }
+                }
+            }
+
+            &:hover {
+                .store-link {
+                    opacity: 1;
+                    background-color: rgba($primary-black, 0.8);
+                }
+            }
+        }
+
+        .store-title {
+            text-transform: uppercase;
+        }
+    }
+}
