--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -4,6 +4,7 @@
 
 html {
     overflow-x: hidden;
+    overflow-y: unset;
 }
 
 body {
@@ -13,7 +14,6 @@ body {
     padding: 0;
     color: $primary-black;
     font-size: 14px;
-    overflow-x: hidden;
 
     &.menu-open {
         position: fixed;
