--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -18,6 +18,13 @@
     &__slider {
         width: 100%;
         display: flex;
+        justify-content: center;
+
+        .slick-track {
+            @media (min-width: 992px) {
+                width: 100% !important;
+            }
+        }
 
         .slick-list {
             padding: 0 1rem;
@@ -81,6 +88,7 @@
             margin: 0.5rem;
             cursor: pointer;
             transition: .35s;
+            display: block !important;
 
             &:hover {
                 background-color: $blue-100;
@@ -127,18 +135,35 @@
                 padding: 0 10rem;
             }
         }
+
+        .mobile-view-more {
+            a {
+                font-size: 18px;
+                font-weight: 600;
+                color: $primary-blue;
+                text-decoration: none;
+            }
+        }
     }
 }
 
-.store-slider {
-    margin: 3rem 0 6rem;
+.store-block {
+    margin: 1rem 0 6rem;
+    display: flex;
+    flex-wrap: wrap;
 
     &__item {
-        padding: 0 0.5rem;
+        padding: 0 1rem;
         outline: 0;
+        flex: 1 1 50%;
+        margin-bottom: 1.5rem;
 
-        @media (min-width: 768px) {
-            padding: 0 1rem;
+        @media (min-width: 992px) {
+            flex: 1 1 25%;
+        }
+
+        @media (min-width: 1200px) {
+            flex: 1 1 20%;
         }
 
         .store-img {
@@ -196,6 +221,41 @@
 
         .store-title {
             text-transform: uppercase;
+        }
+
+        &.view-more {
+            .view-more-block {
+                height: 250px;
+                background-color: $primary-blue;
+                border-radius: 10px;
+
+                @media (min-width: 768px) {
+                    height: 300px;
+                }
+
+                @media (min-width: 1444px) {
+                    height: 350px;
+                }
+
+                &::before {
+                    content: '';
+                    background: url('/assets/img/clothes-doodle.jpg') no-repeat center;
+                    background-size: cover;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    position: absolute;
+                    mix-blend-mode: multiply;
+                    opacity: 0.3;
+                    border-radius: 10px;
+                }
+
+                .store-link {
+                    opacity: 1;
+                    background-color: transparent;
+                }
+            }
         }
     }
 }
