Partner with us page added

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -23,6 +23,7 @@
 // Pages
 @import "pages/home";
 @import "pages/stores";
+@import "pages/partner-with-us";
 
 // Vendors
 @import "vendors/slick-slider";
