--- a/src/components/main-menu.html
+++ b/src/components/main-menu.html
@@ -1,8 +1,8 @@
 <div class="overlay d-flex flex-column" id="overlay">
     <nav class="overlay-menu flex-grow-1">
         <ul>
-            <li><a href="#">Stores</a></li>
-            <li><a href="#">Partner with us</a></li>
+            <li><a href="stores.html">Stores</a></li>
+            <li><a href="partner-with-us.html">Partner with us</a></li>
             <li><a href="#">Support</a></li>
         </ul>
     </nav>
