--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -2,7 +2,7 @@
     position: sticky;
     top: 69px;
     z-index: 1000;
-    margin-bottom: 6rem;
+    margin-bottom: 3rem;
 
     &--sticky-top {
         background: $blue-100;
@@ -106,7 +106,6 @@
     padding: 2rem 0 6rem;
 
     .category-block {
-        margin-bottom: 3rem;
         text-align: center;
 
         &:last-of-type {
@@ -148,7 +147,7 @@
 }
 
 .store-block {
-    margin: 1rem 0 6rem;
+    margin: 1rem 0 4rem;
     display: flex;
     flex-wrap: wrap;
 
@@ -257,5 +256,44 @@
                 }
             }
         }
+    }
+
+    &--grid {
+        margin-left: -15px;
+        margin-right: -15px;
+
+        .store-block__item {
+            flex: 0 0 50%;
+            padding: 0 15px;
+            
+            @media (min-width: 768px) {
+                flex: 0 0 33.3%;
+            }
+    
+            @media (min-width: 992px) {
+                flex: 0 0 25%;
+            }
+        }
+    }
+}
+
+.img-bg {
+    .bg-img-wrapper {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        opacity: 0.6;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .bg-img-text-block {
+        padding-top: 7rem;
+        padding-bottom: 7rem;
     }
 }
