--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -8,7 +8,7 @@
         height: 100vh;
     }
 
-    @media (min-height: 900px) {
+    @media (min-height: 1200px) {
         height: 50vh;
     }
 
@@ -199,4 +199,45 @@
 
 .logo-section {
     padding: 6rem 0;
+}
+
+
+.icon-scroll {
+    width: 30px;
+    height: 60px;
+    top: 50%;
+    margin-top: 3rem;
+    box-shadow: inset 0 0 0 2px $primary-black;
+    border-radius: 25px;
+    position: relative;
+
+    @media (min-width: 992px) {
+        margin-top: -15px;
+    }
+
+    &::before {
+        content: '';
+        width: 8px;
+        height: 8px;
+        background: $primary-black;
+        margin-left: -4px;
+        top: 8px;
+        border-radius: 4px;
+        animation-duration: 1.5s;
+        animation-iteration-count: infinite;
+        animation-name: scroll;
+        position: absolute;
+        left: 50%;
+    }
+}
+
+@keyframes scroll {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(46px);
+    }
 }
