--- a/src/components/main-menu.html
+++ b/src/components/main-menu.html
@@ -3,7 +3,7 @@
         <ul>
             <li><a href="stores.html">Stores</a></li>
             <li><a href="partner-with-us.html">Partner with us</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="support.html">Support</a></li>
         </ul>
     </nav>
     <div class="container bottom-details">
