--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -14,6 +14,7 @@
 // Components
 @import "components/hamburger-menu";
 @import "components/buttons";
+@import "components/forms";
 
 // Layouts
 @import "layouts/top-navbar";
@@ -24,6 +25,7 @@
 @import "pages/home";
 @import "pages/stores";
 @import "pages/partner-with-us";
+@import "pages/support";
 
 // Vendors
 @import "vendors/slick-slider";
