--- a/src/assets/scss/components/_hamburger-menu.scss
+++ b/src/assets/scss/components/_hamburger-menu.scss
@@ -2,21 +2,29 @@
     position: fixed;
     transform: translate(-50%, -50%);
     left: 50%;
-    top: 35px;
+    top: 29px;
     cursor: pointer;
     z-index: 1032;
+
+    @media (min-width: 576px) {
+        top: 35px;
+    }
 
     &::before {
         position: absolute;
         content: '';
         width: 1px;
-        height: 68px;
+        height: 57px;
         background-color: $blue-100;
         transform: translateX(-50%);
         left: 50%;
         z-index: -1;
         top: -10px;
         transition: .35s all;
+
+        @media (min-width: 576px) {
+            height: 68px;
+        }
     }
 
     svg {
