--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -1,8 +1,12 @@
 .filter-block {
     position: sticky;
-    top: 69px;
+    top: 57px;
     z-index: 1000;
     margin-bottom: 3rem;
+
+    @media (min-width: 576px) {
+        top: 69px; 
+    }
 
     &--sticky-top {
         background: $blue-100;
@@ -161,10 +165,6 @@
             flex: 1 1 25%;
         }
 
-        @media (min-width: 1200px) {
-            flex: 1 1 20%;
-        }
-
         .store-img {
             img {
                 width: 100%;
@@ -222,40 +222,40 @@
             text-transform: uppercase;
         }
 
-        &.view-more {
-            .view-more-block {
-                height: 250px;
-                background-color: $primary-blue;
-                border-radius: 10px;
+        // &.view-more {
+        //     .view-more-block {
+        //         height: 250px;
+        //         background-color: $primary-blue;
+        //         border-radius: 10px;
 
-                @media (min-width: 768px) {
-                    height: 300px;
-                }
+        //         @media (min-width: 768px) {
+        //             height: 300px;
+        //         }
 
-                @media (min-width: 1444px) {
-                    height: 350px;
-                }
+        //         @media (min-width: 1444px) {
+        //             height: 350px;
+        //         }
 
-                &::before {
-                    content: '';
-                    background: url('/assets/img/clothes-doodle.jpg') no-repeat center;
-                    background-size: cover;
-                    width: 100%;
-                    height: 100%;
-                    top: 0;
-                    left: 0;
-                    position: absolute;
-                    mix-blend-mode: multiply;
-                    opacity: 0.3;
-                    border-radius: 10px;
-                }
+        //         &::before {
+        //             content: '';
+        //             background: url('/assets/img/clothes-doodle.jpg') no-repeat center;
+        //             background-size: cover;
+        //             width: 100%;
+        //             height: 100%;
+        //             top: 0;
+        //             left: 0;
+        //             position: absolute;
+        //             mix-blend-mode: multiply;
+        //             opacity: 0.3;
+        //             border-radius: 10px;
+        //         }
 
-                .store-link {
-                    opacity: 1;
-                    background-color: transparent;
-                }
-            }
-        }
+        //         .store-link {
+        //             opacity: 1;
+        //             background-color: transparent;
+        //         }
+        //     }
+        // }
     }
 
     &--grid {
