--- a/src/assets/scss/pages/_support.scss
+++ b/src/assets/scss/pages/_support.scss
@@ -7,23 +7,23 @@
         &:last-of-type {
             margin-bottom: 0;
         }
-        
+
         &__title {
             font-size: 20px;
             line-height: 30px;
             font-weight: 600;
-            padding-left: 2rem;
+            padding-left: 2.5rem;
             margin-bottom: 1.5rem;
             position: relative;
 
             &::before {
-                content: "\f121";
-                font-family: "uicons-solid-rounded";
-                color: $primary-black;
-                font-size: 18px;
+                content: '';
+                background: url('/assets/img/feathers-black.svg') no-repeat center;
+                width: 30px;
+                height: 34px;
+                background-size: 100% auto;
                 position: absolute;
                 left: 0;
-                top: 3px
             }
         }
     }
