--- a/src/layouts/main-footer.html
+++ b/src/layouts/main-footer.html
@@ -14,7 +14,7 @@
                 <div class="footer-block">
                     <h4 class="footer-block__title mb-4">Useful links</h4>
                     <ul class="footer-block__nav">
-                        <li class="footer-block__text mb-3"><a href="#">Support</a></li>
+                        <li class="footer-block__text mb-3"><a href="support.html">Support</a></li>
                         <li class="footer-block__text mb-3"><a href="#">Terms &amp; conditions</a></li>
                         <li class="footer-block__text"><a href="#">Privacy policy</a></li>
                     </ul>
