--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -200,12 +200,17 @@
                 a {
                     color: $primary-blue;
                     font-weight: 600;
-                    font-size: 16px;
+                    font-size: 12px;
                     background-color: $blue-100;
-                    padding: 1rem 2.5rem;
+                    padding: 0.5rem 1.5rem;
                     border-radius: 5px;
                     transition: .35s;
                     text-decoration: none;
+
+                    @media (min-width: 768px) {
+                        font-size: 16px;
+                        padding: 1rem 2.5rem;
+                    }
 
                     &:hover {
                         background-color: $blue-200;
