--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -11,6 +11,12 @@
         margin-bottom: 10px;
     }
 
+    &__error {
+        color: red;
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+
     input {
         height: 50px;
         border-radius: 8px;
