--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -5,6 +5,9 @@
 }
 
 .mp-form-group {
+    position: relative;
+    padding-bottom: 20px;
+
     &__label {
         color: $white;
         font-size: 16px;
@@ -12,9 +15,11 @@
     }
 
     &__error {
-        color: red;
-        font-size: 16px;
-        margin-bottom: 10px;
+        color: $primary-red;
+        font-size: 12px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
     }
 
     input {
