--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -48,6 +48,11 @@
                 @media (min-width: 768px) {
                     width: 90%;
                 }
+
+                @media (max-height: 700px) {
+                    margin-top: 3rem;
+                    width: 80%;
+                }
             }
         }
     }
@@ -144,7 +149,7 @@
 
         @media (min-width: 992px) {
             margin-top: 0;
-            justify-content: flex-end;
+            justify-content: flex-start;
         }
 
         img {
@@ -227,6 +232,21 @@
 
 .logo-section {
     padding: 6rem 0;
+
+    .logo-slider {
+        .slick-track {
+            display: flex;
+            align-items: center;
+        }
+
+        img {
+            filter: grayscale(100%) opacity(30%);
+
+            &.invert-color {
+                filter: invert(100%) opacity(30%);
+            }
+        }
+    }
 }
 
 
