Press page added

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -26,6 +26,7 @@
 @import "pages/stores";
 @import "pages/partner-with-us";
 @import "pages/support";
+@import "pages/press";
 
 // Vendors
 @import "vendors/slick-slider";
