--- a/src/assets/scss/abstract/_mixins.scss
+++ b/src/assets/scss/abstract/_mixins.scss
@@ -18,3 +18,7 @@
 
 .overflow-x-hidden { overflow-x: hidden; }
 .overflow-y-hidden { overflow-y: hidden; }
+
+.padding-6-t-b {
+    padding: 6rem 0;
+}
