--- a/src/assets/scss/layouts/_main-menu.scss
+++ b/src/assets/scss/layouts/_main-menu.scss
@@ -29,6 +29,10 @@
                 &:nth-of-type(3) {
                     animation-delay: .45s;
                 }
+
+                &:nth-of-type(4) {
+                    animation-delay: .5s;
+                }
             }
         }
     }
@@ -43,7 +47,9 @@
             font-size: clamp(3.5rem, 8vw, 6rem);   
         }
 
-        @media (min-width: 768px) {
+        @media (min-width: 992px) and (max-width: 1439px) {
+            line-height: 1.3;
+            font-size: 5rem;
             margin-top: 2rem;
         }
 
