--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -195,34 +195,46 @@
                 align-items: center;
                 justify-content: center;
                 transition: .35s;
-                opacity: 0;
+                background-color: rgba($primary-black, 0.4);
 
                 a {
-                    color: $primary-blue;
-                    font-weight: 600;
-                    font-size: 12px;
-                    background-color: $blue-100;
-                    padding: 0.5rem 1.5rem;
-                    border-radius: 5px;
-                    transition: .35s;
-                    text-decoration: none;
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
 
-                    @media (min-width: 768px) {
-                        font-size: 16px;
-                        padding: 1rem 2.5rem;
-                    }
+                    img {
+                        filter: grayscale(1);
+                        opacity: 0.7;
+                        transition: .35s;
 
-                    &:hover {
-                        background-color: $blue-200;
-                        text-decoration: none;
+                        &.rectangular-logo {
+                            width: calc(100% - 200px);
+                            height: auto;
+                        }
+
+                        &.square-logo {
+                            height: calc(100% - 200px);
+                            width: auto;
+                        }
+
+                        &.b2w-logo {
+                            filter: invert(1) grayscale(1);
+                        }
                     }
                 }
             }
 
             &:hover {
                 .store-link {
-                    opacity: 1;
                     background-color: rgba($primary-black, 0.8);
+
+                    a {
+                        img {
+                            opacity: 1;
+                        }
+                    }
                 }
             }
         }
