--- a/src/components/main-menu.html
+++ b/src/components/main-menu.html
@@ -29,9 +29,9 @@
                 <div class="menu-bottom-block">
                     <h4 class="mb-3 mb-md-4">Social media</h4>
                     <ul class="social-icons-list d-flex flex-row justify-content-center">
-                        <li><a href=""><img src="assets/img/instagram.png" alt=""></a></li>
-                        <li><a href=""><img src="assets/img/facebook.png" alt=""></a></li>
-                        <li><a href=""><img src="assets/img/whatsapp.png" alt=""></a></li>
+                        <li><a href="https://www.instagram.com/mintpay.lk/" target="_blank"><img src="assets/img/instagram.png" alt=""></a></li>
+                        <li><a href="https://www.facebook.com/mintpaylk/" target="_blank"><img src="assets/img/facebook.png" alt=""></a></li>
+                        <li><a href="https://wa.me/94772985290" target="_blank"><img src="assets/img/whatsapp.png" alt=""></a></li>
                         <li><a href=""><img src="assets/img/twitter.png" alt=""></a></li>
                     </ul>
                 </div>
