--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -210,13 +210,21 @@
                         transition: .35s;
 
                         &.rectangular-logo {
-                            width: calc(100% - 200px);
+                            width: calc(100% - 50px);
                             height: auto;
+
+                            @media (min-width: 600px) {
+                                width: calc(100% - 200px);
+                            }
                         }
 
                         &.square-logo {
-                            height: calc(100% - 200px);
+                            height: calc(100% - 100px);
                             width: auto;
+
+                            @media (min-width: 600px) {
+                                height: calc(100% - 200px);
+                            }
                         }
 
                         &.b2w-logo {
