--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -18,21 +18,6 @@
         .hero-section {
             position: relative;
             z-index: 2;
-
-            .fade-in-delay {
-                opacity: 0;
-                animation: fadeIn 0.5s ease-in both;
-                animation-delay: 1s;
-                position: relative;
-
-                &.delay-1 {
-                    animation-delay: 1.7s;
-                }
-
-                &.delay-2 {
-                    animation-delay: 2.5s;
-                }
-            }
         }
 
         .hero-video {
@@ -53,7 +38,7 @@
                 margin-top: 0;
             }
 
-            video {
+            video,img {
                 width: 80%;
 
                 @media (min-width: 768px) {
