--- a/src/components/main-menu.html
+++ b/src/components/main-menu.html
@@ -1,10 +1,10 @@
 <div class="overlay d-flex flex-column" id="overlay">
     <nav class="overlay-menu flex-grow-1">
         <ul>
-            <li><a href="stores.html">Stores</a></li>
-            <li><a href="partner-with-us.html">Partner with us</a></li>
-            <li><a href="press.html">Press</a></li>
-            <li><a href="support.html">Support</a></li>
+            <li><a class="menu-link" href="stores.html">Stores</a></li>
+            <li><a class="menu-link" href="partner-with-us.html">Partner with us</a></li>
+            <li><a class="menu-link" href="press.html">Press</a></li>
+            <li><a class="menu-link" href="support.html">Support</a></li>
         </ul>
     </nav>
     <div class="container bottom-details">
