updated the content

--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -69,7 +69,7 @@
 .how-it-works-section {
 
     .header-text-block {
-        max-width: 30rem;
+        //max-width: 30rem;
         margin: auto;
     }
 
