--- a/src/layouts/main-footer.html
+++ b/src/layouts/main-footer.html
@@ -7,7 +7,7 @@
                     <p class="footer-block__text mb-3"><a href="mailto:support@mintpay.lk">support@mintpay.lk</a>
                     </p>
                     <p class="footer-block__text mb-3">+94 772 985 290</p>
-                    <address class="footer-block__text">410, 33 Bauddhaloka Mawatha, Colombo 00700</address>
+                    <address class="footer-block__text">31A, Mallika Lane, Colombo 00600</address>
                 </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-3">
@@ -15,8 +15,8 @@
                     <h4 class="footer-block__title mb-4">Useful links</h4>
                     <ul class="footer-block__nav">
                         <li class="footer-block__text mb-3"><a href="support.html">Support</a></li>
-                        <li class="footer-block__text mb-3"><a href="#">Terms &amp; conditions</a></li>
-                        <li class="footer-block__text"><a href="#">Privacy policy</a></li>
+                        <li class="footer-block__text mb-3"><a href="https://app.mintpay.lk/terms/">Terms &amp; conditions</a></li>
+                        <li class="footer-block__text"><a href="https://app.mintpay.lk/privacy/">Privacy policy</a></li>
                     </ul>
                 </div>
             </div>
