--- a/src/layouts/main-header.html
+++ b/src/layouts/main-header.html
@@ -50,13 +50,13 @@
 
             <ul class="navbar-nav flex-shrink-0 flex-row">
                 <li class="nav-item me-4">
-                    <a class="nav-link signup" aria-current="page" href="#">
+                    <a class="nav-link signup" aria-current="page" href="https://app.mintpay.lk/signup/">
                         <span class="d-none d-sm-inline-block">Sign up</span> 
                         <i class="fi-sr-user"></i>
                     </a>
                 </li>
                 <li class="nav-item pe-3 pe-sm-0">
-                    <a class="nav-link login" href="#">
+                    <a class="nav-link login" href="https://app.mintpay.lk/accounts/login/">
                         <span class="d-none d-sm-inline-block">Log in</span>
                         <i class="fi-sr-lock"></i>
                     </a>
