--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -93,9 +93,15 @@
             cursor: pointer;
             transition: .35s;
             display: block !important;
+            text-decoration: none;
+            color: #27323F;
 
             &:hover {
                 background-color: $blue-100;
+            }
+
+            &:focus {
+                outline: 0 !important;
             }
 
             &.active {
@@ -155,8 +161,10 @@
     display: flex;
     flex-wrap: wrap;
 
-    @media (min-width: 992px) {
-        justify-content: center;
+    &.store-page {
+        @media (min-width: 992px) {
+            justify-content: center;
+        }
     }
 
     &__item {
@@ -175,10 +183,6 @@
                 height: 170px;
                 border-radius: 10px;
                 object-fit: cover;
-
-                @media (min-width: 768px) {
-                    height: 250px;
-                }
 
                 @media (min-width: 768px) {
                     height: 300px;
