--- a/src/components/main-menu.html
+++ b/src/components/main-menu.html
@@ -20,8 +20,7 @@
             <div class="col-12 col-md-4">
                 <div class="menu-bottom-block mb-4 mb-md-0">
                     <h4 class="mb-3 mb-md-4">Our location</h4>
-                    <p class="mb-2 mb-md-3">410, 33 Bauddhaloka Mawatha,
-                        Colombo 00700</p>
+                    <p class="mb-2 mb-md-3">31A, Mallika Lane, Colombo 00600</p>
                 </div>
             </div>
 
@@ -30,9 +29,9 @@
                     <h4 class="mb-3 mb-md-4">Social media</h4>
                     <ul class="social-icons-list d-flex flex-row justify-content-center">
                         <li><a href="https://www.instagram.com/mintpay.lk/" target="_blank"><img src="assets/img/instagram.png" alt=""></a></li>
-                        <li><a href="https://www.facebook.com/mintpaylk/" target="_blank"><img src="assets/img/facebook.png" alt=""></a></li>
+                        <li><a href="https://www.facebook.com/mintpay.lk/" target="_blank"><img src="assets/img/facebook.png" alt=""></a></li>
                         <li><a href="https://wa.me/94772985290" target="_blank"><img src="assets/img/whatsapp.png" alt=""></a></li>
-                        <li><a href=""><img src="assets/img/twitter.png" alt=""></a></li>
+                        <li><a href="https://www.linkedin.com/company/mintpaylk/?viewAsMember=true"><img src="assets/img/linkedin.png" alt=""></a></li>
                     </ul>
                 </div>
             </div>
