added more info to support

--- a/src/layouts/main-footer.html
+++ b/src/layouts/main-footer.html
@@ -43,7 +43,7 @@
 
         <div class="row">
             <div class="col-12">
-                <div class="footer-bottom-text text-center">Copyright 2021 &copy; Mintpay Pte Ltd. All rights
+                <div class="footer-bottom-text text-center">Copyright 2021 &copy; Mintpay Pvt Ltd. All rights
                     reserved.</div>
             </div>
         </div>
