--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -15,6 +15,7 @@
 @import "components/hamburger-menu";
 @import "components/buttons";
 @import "components/forms";
+@import "components/success";
 
 // Layouts
 @import "layouts/top-navbar";
