--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -97,7 +97,8 @@
             color: #27323F;
 
             &:hover {
-                background-color: $blue-100;
+                background-color: $blue-200;
+                color: #27323F;
             }
 
             &:focus {
