--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -73,16 +73,29 @@ body {
 
 .not-found-page-section {
     position: relative;
+    padding: 6rem 0;
+    overflow: hidden;
 
     &::before {
         position: absolute;
         content: '';
-        width: 300px;
-        height: 300px;
+        width: 200px;
+        height: 200px;
         bottom: 0;
-        left: 2rem;
-        background: url('/assets/img/bionocular.png') no-repeat center;
+        left: 0;
+        background: url('/assets/img/magnifying-glass.png') no-repeat center;
         background-size: contain;
+        filter: drop-shadow(20px 60px 8px rgba($black, 0.1)) opacity(0.2);
+
+        @media (min-width: 768px) {
+            filter: drop-shadow(20px 60px 8px rgba($black, 0.1)) opacity(1);
+        }
+
+        @media (min-width: 992px) {
+            width: 300px;
+            height: 300px;
+            left: 2rem;
+        }
     }
 
     .center-grid {
