--- a/src/assets/scss/components/_success.scss
+++ b/src/assets/scss/components/_success.scss
@@ -1,27 +1,3 @@
-@-webkit-keyframes "fall-in" {
-    0% {
-        -ms-transform: scale(3, 3);
-        -webkit-transform: scale(3, 3);
-        transform: scale(3, 3);
-        opacity: 0;
-    }
-    50% {
-        -ms-transform: scale(1, 1);
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
-        opacity: 1;
-    }
-    60% {
-        -ms-transform: scale(1.1, 1.1);
-        -webkit-transform: scale(1.1, 1.1);
-        transform: scale(1.1, 1.1);
-    }
-    100% {
-        -ms-transform: scale(1, 1);
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
-    }
-}
 @-moz-keyframes "fall-in" {
     0% {
         -ms-transform: scale(3, 3);
@@ -29,95 +5,27 @@
         transform: scale(3, 3);
         opacity: 0;
     }
+
     50% {
         -ms-transform: scale(1, 1);
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
         opacity: 1;
     }
+
     60% {
         -ms-transform: scale(1.1, 1.1);
         -webkit-transform: scale(1.1, 1.1);
         transform: scale(1.1, 1.1);
     }
+
     100% {
         -ms-transform: scale(1, 1);
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
     }
 }
-@-o-keyframes "fall-in" {
-    0% {
-        -ms-transform: scale(3, 3);
-        -webkit-transform: scale(3, 3);
-        transform: scale(3, 3);
-        opacity: 0;
-    }
-    50% {
-        -ms-transform: scale(1, 1);
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
-        opacity: 1;
-    }
-    60% {
-        -ms-transform: scale(1.1, 1.1);
-        -webkit-transform: scale(1.1, 1.1);
-        transform: scale(1.1, 1.1);
-    }
-    100% {
-        -ms-transform: scale(1, 1);
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
-    }
-}
-@-webkit-keyframes "plunge" {
-    0% {
-        margin-top: -100%;
-    }
-    100% {
-        margin-top: 25%;
-    }
-}
-@-moz-keyframes "plunge" {
-    0% {
-        margin-top: -100%;
-    }
-    100% {
-        margin-top: 25%;
-    }
-}
-@-o-keyframes "plunge" {
-    0% {
-        margin-top: -100%;
-    }
-    100% {
-        margin-top: 25%;
-    }
-}
-@-moz-keyframes "fall-in" {
-    0% {
-        -ms-transform: scale(3, 3);
-        -webkit-transform: scale(3, 3);
-        transform: scale(3, 3);
-        opacity: 0;
-    }
-    50% {
-        -ms-transform: scale(1, 1);
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
-        opacity: 1;
-    }
-    60% {
-        -ms-transform: scale(1.1, 1.1);
-        -webkit-transform: scale(1.1, 1.1);
-        transform: scale(1.1, 1.1);
-    }
-    100% {
-        -ms-transform: scale(1, 1);
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
-    }
-}
+
 @-webkit-keyframes "fall-in" {
     0% {
         -ms-transform: scale(3, 3);
@@ -125,23 +33,27 @@
         transform: scale(3, 3);
         opacity: 0;
     }
+
     50% {
         -ms-transform: scale(1, 1);
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
         opacity: 1;
     }
+
     60% {
         -ms-transform: scale(1.1, 1.1);
         -webkit-transform: scale(1.1, 1.1);
         transform: scale(1.1, 1.1);
     }
+
     100% {
         -ms-transform: scale(1, 1);
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
     }
 }
+
 @-o-keyframes "fall-in" {
     0% {
         -ms-transform: scale(3, 3);
@@ -149,23 +61,27 @@
         transform: scale(3, 3);
         opacity: 0;
     }
+
     50% {
         -ms-transform: scale(1, 1);
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
         opacity: 1;
     }
+
     60% {
         -ms-transform: scale(1.1, 1.1);
         -webkit-transform: scale(1.1, 1.1);
         transform: scale(1.1, 1.1);
     }
+
     100% {
         -ms-transform: scale(1, 1);
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
     }
 }
+
 @keyframes "fall-in" {
     0% {
         -ms-transform: scale(3, 3);
@@ -173,269 +89,67 @@
         transform: scale(3, 3);
         opacity: 0;
     }
+
     50% {
         -ms-transform: scale(1, 1);
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
         opacity: 1;
     }
+
     60% {
         -ms-transform: scale(1.1, 1.1);
         -webkit-transform: scale(1.1, 1.1);
         transform: scale(1.1, 1.1);
     }
+
     100% {
         -ms-transform: scale(1, 1);
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
     }
 }
-@-moz-keyframes "plunge" {
-    0% {
-        margin-top: -100%;
-    }
-    100% {
-        margin-top: 15%;
-    }
-}
-@-webkit-keyframes "plunge" {
-    0% {
-        margin-top: -100%;
-    }
-    100% {
-        margin-top: 15%;
-    }
-}
-@-o-keyframes "plunge" {
-    0% {
-        margin-top: -100%;
-    }
-    100% {
-        margin-top: 15%;
-    }
-}
-@keyframes "plunge" {
-    0% {
-        margin-top: -100%;
-    }
-    100% {
-        margin-top: 15%;
-    }
-}
 
 .modalbox.success {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
-    background: #fff;
+    background: $white;
     padding: 25px 25px 15px;
     text-align: center;
-    h1 {
-        font-family: 'Montserrat', sans-serif;
-    }
+
     p {
-        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
     }
-    button {
-        -webkit-transition: all 0.1s ease-in-out;
-        transition: all 0.1s ease-in-out;
-        -webkit-border-radius: 30px;
-        -moz-border-radius: 30px;
-        border-radius: 30px;
-        margin-top: 15px;
-        width: 80%;
-        background: transparent;
-        color: #4caf50;
-        border-color: #4caf50;
-        outline: none;
-        &:active {
-            -webkit-transition: all 0.1s ease-in-out;
-            transition: all 0.1s ease-in-out;
-            -webkit-border-radius: 30px;
-            -moz-border-radius: 30px;
-            border-radius: 30px;
-            margin-top: 15px;
-            width: 80%;
-            background: transparent;
-            color: #4caf50;
-            border-color: #4caf50;
-            outline: none;
-            &:hover {
-                color: #fff;
-                background: #4caf50;
-                border-color: transparent;
-            }
-        }
-        &:focus {
-            -webkit-transition: all 0.1s ease-in-out;
-            transition: all 0.1s ease-in-out;
-            -webkit-border-radius: 30px;
-            -moz-border-radius: 30px;
-            border-radius: 30px;
-            margin-top: 15px;
-            width: 80%;
-            background: transparent;
-            color: #4caf50;
-            border-color: #4caf50;
-            outline: none;
-            &:hover {
-                color: #fff;
-                background: #4caf50;
-                border-color: transparent;
-            }
-        }
-        &:hover {
-            color: #fff;
-            background: #4caf50;
-            border-color: transparent;
-        }
-    }
+
     .icon {
         position: relative;
         margin: 0 auto;
         margin-top: -75px;
-        background: #4caf50;
+        background: $primary-green;
         height: 100px;
         width: 100px;
         border-radius: 50%;
-        span {
-            postion: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        i {
             font-size: 4em;
-            color: #fff;
+            color: $white;
             text-align: center;
-            padding-top: 20px;
         }
     }
-}
-.modalbox.error {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    background: #fff;
-    padding: 25px 25px 15px;
-    text-align: center;
-    h1 {
-        font-family: 'Montserrat', sans-serif;
-    }
-    p {
-        font-family: 'Open Sans', sans-serif;
-    }
-    button {
-        -webkit-transition: all 0.1s ease-in-out;
-        transition: all 0.1s ease-in-out;
-        -webkit-border-radius: 30px;
-        -moz-border-radius: 30px;
-        border-radius: 30px;
-        margin-top: 15px;
-        width: 80%;
-        background: transparent;
-        color: #4caf50;
-        border-color: #4caf50;
-        outline: none;
-        color: #f44336;
-        border-color: #f44336;
-        &:active {
-            -webkit-transition: all 0.1s ease-in-out;
-            transition: all 0.1s ease-in-out;
-            -webkit-border-radius: 30px;
-            -moz-border-radius: 30px;
-            border-radius: 30px;
-            margin-top: 15px;
-            width: 80%;
-            background: transparent;
-            color: #4caf50;
-            border-color: #4caf50;
-            outline: none;
-            color: #f44336;
-            border-color: #f44336;
-            &:hover {
-                color: #fff;
-                background: #4caf50;
-                border-color: transparent;
-                color: #fff;
-                background: #f44336;
-            }
+
+    &.animate {
+        .icon {
+            -webkit-animation: fall-in 0.75s;
+            -moz-animation: fall-in 0.75s;
+            -o-animation: fall-in 0.75s;
+            animation: fall-in 0.75s;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         }
-        &:focus {
-            -webkit-transition: all 0.1s ease-in-out;
-            transition: all 0.1s ease-in-out;
-            -webkit-border-radius: 30px;
-            -moz-border-radius: 30px;
-            border-radius: 30px;
-            margin-top: 15px;
-            width: 80%;
-            background: transparent;
-            color: #4caf50;
-            border-color: #4caf50;
-            outline: none;
-            color: #f44336;
-            border-color: #f44336;
-            &:hover {
-                color: #fff;
-                background: #4caf50;
-                border-color: transparent;
-                color: #fff;
-                background: #f44336;
-            }
-        }
-        &:hover {
-            color: #fff;
-            background: #4caf50;
-            border-color: transparent;
-            color: #fff;
-            background: #f44336;
-        }
-    }
-    .icon {
-        position: relative;
-        margin: 0 auto;
-        margin-top: -75px;
-        background: #4caf50;
-        height: 100px;
-        width: 100px;
-        border-radius: 50%;
-        background: #f44336;
-        span {
-            postion: absolute;
-            font-size: 4em;
-            color: #fff;
-            text-align: center;
-            padding-top: 20px;
-            padding-top: 25px;
-        }
-    }
-}
-.modalbox.success.animate {
-    .icon {
-        -webkit-animation: fall-in 0.75s;
-        -moz-animation: fall-in 0.75s;
-        -o-animation: fall-in 0.75s;
-        animation: fall-in 0.75s;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    }
-}
-.modalbox.error.animate {
-    .icon {
-        -webkit-animation: fall-in 0.75s;
-        -moz-animation: fall-in 0.75s;
-        -o-animation: fall-in 0.75s;
-        animation: fall-in 0.75s;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    }
-}
-.center {
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
-    .change {
-        clearn: both;
-        display: block;
-        font-size: 10px;
-        color: #ccc;
-        margin-top: 10px;
     }
 }
